# arba-plug

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
cmake/config/: package-config.cmake.in
cmake/script/: quick_install.cmake
example/: CMakeLists.txt  plugin_example.cpp  safe_plugin_example.cpp
example/intgen/: CMakeLists.txt  intgen.cpp
include/arba/plug/: exception.hpp  plugin.hpp  plugin_base.hpp  plugin_impl.hpp  safe_plugin.hpp  smart_plugin.hpp  unsafe_plugin.hpp
src/arba/plug/: plugin.cpp  plugin_base.cpp
test/: CMakeLists.txt  plugin_tests.cpp  project_version_tests.cpp  safe_plugin_tests.cpp  smart_plugin_tests.cpp  unsafe_plugin_tests.cpp
test/concat/: CMakeLists.txt  concat.cpp  concat.hpp
test/concat_interface/: CMakeLists.txt  concat_interface.hpp
test/strgen/: CMakeLists.txt  strgen.cpp
test_package/: CMakeLists.txt  test_package.cpp
test_package/intgen/: CMakeLists.txt  intgen.cpp
